增加短信方法